--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Denigri - Designer</title>
 <link rel="stylesheet" href="css/home-style.css">
 	<link rel="icon" type="image/png" href="favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="main">
