--- a/index.html
+++ b/index.html
@@ -19,10 +19,90 @@
 	</div>
 		<nav class="menu">
 			<div class="nav-menu">
-				<button class="button buttonD"><a href="index.html"><span class="D">D</span> </a>
-				</button>
-				<button class="button buttonR"><span class="R">R</span></button>
-				<button id="colorbutton" class="button buttonDenigri" onclick="openNav(); changeColor();"><span class="Denigri">Denigri</span></button>
+				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+<style type="text/css">
+#occhio {position:fixed;}
+.st0{opacity:0.95;}
+.st1{fill:#222221;}
+.st2{fill:none;stroke:#222221;stroke-miterlimit:10;}
+.st3{fill:#FDFEFF;}
+.st4{fill:#66CCFF;}
+</style>
+<g id="button">
+<g>
+	<g class="st0">
+		<g>
+			<circle class="st1" cx="25" cy="27" r="22"/>
+			<circle class="st2" cx="25" cy="27" r="22"/>
+		</g>
+		<g>
+			<circle class="st3" cx="24" cy="25" r="22"/>
+			<circle class="st2" cx="24" cy="25" r="22"/>
+		</g>
+	</g>
+</g>
+</g>
+<g id="occhio">
+<circle id="animation" class="st1" cx="25.2" cy="27.2" r="14.8"/>
+</g>
+<g id="down">
+<g>
+	<path class="st4" d="M6.9,38.6c4,5,10.2,8.2,17.1,8.2s13.1-3.2,17.1-8.2H6.9z"/>
+	<path class="st2" d="M6.9,38.6c4,5,10.2,8.2,17.1,8.2s13.1-3.2,17.1-8.2H6.9z"/>
+</g>
+</g>
+<g id="palpebra_up">
+<g>
+	<path class="st4" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
+	<path class="st2" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
+</g>
+</g>
+</svg>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+<style type="text/css">
+.st0{opacity:0.95;}
+#occhio {
+	position: fixed;
+}
+.st1{fill:#222221;}
+.st2{fill:none;stroke:#222221;stroke-miterlimit:10;}
+.st3{fill:#FDFEFF;}
+.st4{fill:#66CCFF;}
+</style>
+<g id="button">
+<g>
+<g class="st0">
+<g>
+<circle class="st1" cx="25" cy="27" r="22"/>
+<circle class="st2" cx="25" cy="27" r="22"/>
+</g>
+<g>
+<circle class="st3" cx="24" cy="25" r="22"/>
+<circle class="st2" cx="24" cy="25" r="22"/>
+</g>
+</g>
+</g>
+</g>
+<g id="occhio2">
+<circle id="animation2" class="st1" cx="25.2" cy="27.2" r="14.8"/>
+</g>
+<g id="down">
+<g>
+<path class="st4" d="M6.9,38.6c4,5,10.2,8.2,17.1,8.2s13.1-3.2,17.1-8.2H6.9z"/>
+<path class="st2" d="M6.9,38.6c4,5,10.2,8.2,17.1,8.2s13.1-3.2,17.1-8.2H6.9z"/>
+</g>
+</g>
+<g id="palpebra_up">
+<g>
+<path class="st4" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
+<path class="st2" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
+</g>
+</g>
+</svg>
+
+				<button id="colorbutton" class="button buttonDenigri" onclick="openNav(); changeColor();"><span class="Denigri">Bio</span></button>
 			</div>
 		</nav>
 				<div id="about" class="overlay">
@@ -168,8 +248,8 @@
 		function openNav() {
   			var x = document.getElementById("about");
   if (x.style.display === "none") {
-    x.style.display = "block";
-	  x.style.width = "100%";
+		x.style.width = "100%";
+  	x.style.display = "flex";
 
 	  colorbutton.style.backgroundColor = 'white';
   } else {
@@ -180,7 +260,21 @@
   }
 }
 
+// index.js
+window.onscroll = function () {
+    scrollTranslate();
+		scrollTranslatesx()
+}
 
+function scrollTranslate() {
+    let svg = document.getElementById("occhio");
+    occhio.style.transform = "translateY(" + window.pageYOffset/-1300 + "px)"
+}
+
+function scrollTranslatesx() {
+    let svg = document.getElementById("occhio2");
+    occhio2.style.transform = "translateY(" + window.pageYOffset/-1300 + "px)"
+}
 
 </script>
 </body>
