--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 									<li class="tag-cliente">Social Media, Stories</li>
 								</ul>
 							</div>
-							<video src="post/fitbit-L.mp4" autoplay loop>
+							<video src="post/fitbit-L.mp4" autoplay loop muted>
 								</video>
-							<video src="post/fitbit-G.mp4" autoplay loop>
+							<video src="post/fitbit-G.mp4" autoplay loop muted>
 								</video>
-							<video src="post/fitbit-B.mp4" autoplay loop>
+							<video src="post/fitbit-B.mp4" autoplay loop muted>
 								</video>
 							</div>
 							<br>
@@ -227,7 +227,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<figure>
 							<img src ="post/blonde-salad.png" alt="girls">
 						</figure>
-							<video src="post/senso-shoes.mp4" autoplay loop>
+							<video src="post/senso-shoes.mp4" autoplay loop muted>
 								</video>
 							<figure>
 							<img src ="post/blonde-salad-sale.png" alt="blonde-salad-sale">
