--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<div class="nav-menu">
 				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
  viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+<a href="www.denigri.com">
 <style type="text/css">
 #occhio {position:fixed;}
 .st0{opacity:0.95;}
@@ -100,6 +101,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 <path class="st2" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
 </g>
 </g>
+	</a>
 </svg>
 
 				<button id="colorbutton" class="button buttonDenigri" onclick="openNav(); changeColor();"><span class="Denigri">Bio</span></button>
