--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 .st3{fill:#FDFEFF;}
 .st4{fill:#66CCFF;}
 </style>
-<a href="www.denigri.com">
+<a href="index.html">
 <g id="button">
 <g>
 	<g class="st0">
