--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	<path class="st2" d="M46,25c0-12.2-9.8-22-22-22S2,12.8,2,25H46z"/>
 </g>
 </g>
+</a>
 </svg>
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
@@ -72,6 +73,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 .st3{fill:#FDFEFF;}
 .st4{fill:#66CCFF;}
 </style>
+	<a href="index.html">
 <g id="button">
 <g>
 <g class="st0">
