--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Denigri - Designer</title>
 <link rel="stylesheet" href="css/home-style.css">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="favicon-2.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
