--- a/how.html
+++ b/how.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>How I made Denigri.com</title>
 	<link rel="stylesheet" href="css/home-style.css">
+	<link rel="icon" type="image/png" href="favicon-2.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
