--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<figure>
 							<img src ="post/rationale-menu.png" alt="card2-menu">
 						</figure>
+							<figure>
+							<img src ="post/rationale-bag.png" alt="bag-menu">
+						</figure>
 						</div>
 							<br>
 							<br>
