--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<img src ="post/blonde-salad-sunglasses.png" alt="blonde-salad-sunglasses">
 						</figure>
 							</div>
+						<div class="column columnmuseums">
+							<div class="titolo">
+								<ul class="titolo-tag">
+							<li class="cliente">Museums</li>
+									<li class="tag-cliente">Photography</li>
+								</ul>
+							</div>
+							<figure>
+							<img src ="post/museums-prada.png" alt="prada">
+						</figure>
+							<figure>
+							<img src ="post/museums-prada-2.png" alt="prada">
+						</figure>
+							<figure>
+							<img src ="post/museums-karlsruhe.png" alt="karlsruhe">
+						</figure>
 					</div>
 </div>
 	<script>
