--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 								</ul>
 							</div>
 							<figure>
-							<img src ="post/museums-prada.png" alt="prada">
+							<img src ="post/museum-prada.png" alt="prada">
 						</figure>
 							<figure>
-							<img src ="post/museums-prada-2.png" alt="prada">
+							<img src ="post/museum-prada-2.png" alt="prada">
 						</figure>
 							<figure>
-							<img src ="post/museums-karlsruhe.png" alt="karlsruhe">
+							<img src ="post/museum-karlsruhe.png" alt="karlsruhe">
 						</figure>
 					</div>
 </div>
