--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<figure>
 							<img src ="post/rationale-card.png" alt="card-rationale">
 						</figure>
-							<figure>
+							<figure id="rationale-dekstop-menu>
 							<img src ="post/rationale-dekstop-menu.png" alt="rationale-menu-coaster">
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-coaster.png" alt="coaster-rationale">
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-menu.png" alt="card2-menu">
 						</figure>
 							<figure>
