--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<figure>
 							<img src ="post/rationale-card.png" alt="card-rationale">
 						</figure>
-							<figure id="rationale-dekstop-menu>
+							<figure class="column columnrationale dekstop>
 							<img src ="post/rationale-dekstop-menu.png" alt="rationale-menu-coaster">
 						</figure>
 							<figure class="mobile">
