--- a/index.html
+++ b/index.html
@@ -157,16 +157,19 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						</figure>
 							<br>
 							<br>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-pack.png" alt="packaging-rationale">
 
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-card2.png" alt="card2-rationale">
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-card.png" alt="card-rationale">
 						</figure>
+							<figure class="dekstop">
+								<img src="post/rationale-dekstop-pack.png" alt="rationale-pack">
+							</figure>
 							<figure class="dekstop">
 							<img src ="post/rationale-dekstop-menu.png" alt="rationale-menu-coaster">
 						</figure>
