--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 									<li class="tag-cliente">Branding, Logo Design</li>
 								</ul>
 							</div>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/rationale-ok.png" alt="Milano">
 						</figure>
 							<br>
