--- a/index.html
+++ b/index.html
@@ -192,18 +192,24 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 									<li class="tag-cliente">3D Modelling, Composit</li>
 								</ul>
 							</div>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/sidequest-hylia.png" alt="sidequest-hylia">
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/sidequest-hylia-asset.png" alt="sidequest-asset">
 						</figure>
-							<figure>
+							<figure class="dekstop">
+								<img src="post/sidequest-dekstop-hylia" alt="sidequest-hylia">
+							</figure>
+							<figure class="mobile">
 							<img src ="post/sidequest-sandrod.png" alt="sidequest-story">
 						</figure>
-							<figure>
+							<figure class="mobile">
 							<img src ="post/sidequest-sandrod-asset.png" alt="sidequest-sandrod-asset" style="">
 						</figure>
+							<figure class="dekstop">
+								<img src="post/sidequest-dekstop-sandrod" alt="sidequest-sandrod">
+							</figure>
 							</div>
 							<br>
 							<br>
