--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<img src ="post/sidequest-hylia-asset.png" alt="sidequest-asset">
 						</figure>
 							<figure class="dekstop">
-								<img src="post/sidequest-dekstop-hylia" alt="sidequest-hylia">
+								<img src="post/sidequest-dekstop-hylia.png" alt="sidequest-hylia">
 							</figure>
 							<figure class="mobile">
 							<img src ="post/sidequest-sandrod.png" alt="sidequest-story">
@@ -208,7 +208,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<img src ="post/sidequest-sandrod-asset.png" alt="sidequest-sandrod-asset" style="">
 						</figure>
 							<figure class="dekstop">
-								<img src="post/sidequest-dekstop-sandrod" alt="sidequest-sandrod">
+								<img src="post/sidequest-dekstop-sandrod.png" alt="sidequest-sandrod">
 							</figure>
 							</div>
 							<br>
