--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ for (i = 0; i < coll.length; i++) {
   coll[i].addEventListener("click", function() {
     this.classList.toggle("active");
     var content = this.nextElementSibling;
-    if (collapsible__content.style.maxHeight){
-      collapsible__content.style.maxHeight = null;
+    if (content.style.maxHeight){
+      content.style.maxHeight = null;
     } else {
       content.style.maxHeight = content.scrollHeight + "px";
     } 
