--- a/index.html
+++ b/index.html
@@ -191,10 +191,13 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<br>
 						<div class="column columnsidequest">
 							<div class="titolo">
-								<ul class="titolo-tag">
-							<li class="cliente">SideQuest</li>
-									<li class="tag-cliente">3D Modelling, Composit</li>
-								</ul>
+								<div class="collapsible">SideQuest<i class="fa fa-angle-down arrow1" aria-hidden="true"></i>
+								</div>
+								<div class="collapsible__content">
+									<button class="collapsible__tag">3D Modelling</button>
+									<button class="collapsible__tag">Composit</button>
+									<p>The request was to recreate the world of Sidequest, absorbed by his own room, a musical producer who loves videogames and being a teenager.</p>
+								</div>
 							</div>
 							<figure class="mobile">
 							<img src ="post/sidequest-hylia.png" alt="sidequest-hylia">
@@ -219,10 +222,13 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<br>
 						<div class="column columnfitbit">
 							<div class="titolo">
-								<ul class="titolo-tag">
-							<li class="cliente">Fitbit</li>
-									<li class="tag-cliente">Social Media, Stories</li>
-								</ul>
+								<div class="collapsible">Fitbit<i class="fa fa-angle-down arrow1" aria-hidden="true"></i>
+								</div>
+								<div class="collapsible__content">
+									<button class="collapsible__tag">Social Media</button>
+									<button class="collapsible__tag">Stories</button>
+									<p>We wanted to reproduce the different ways and situations of love. Every colour is linked to a portion of the LGBTQ community. I illustrated and animated the stories. I changed the colours of the famous rainbow flag to match with Fitbit’s color palette. 🌈</p>
+								</div>
 							</div>
 							<video src="post/fitbit-L.mp4" autoplay loop muted>
 								</video>
@@ -235,10 +241,14 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<br>
 						<div class="column columnblonde">
 							<div class="titolo">
-								<ul class="titolo-tag">
-							<li class="cliente">The Blonde Salad</li>
-									<li class="tag-cliente">Social Media, Editorial, E-com</li>
-								</ul>
+								<div class="collapsible">The Blonde Salad<i class="fa fa-angle-down arrow1" aria-hidden="true"></i>
+								</div>
+								<div class="collapsible__content">
+									<button class="collapsible__tag">Social Media</button>
+									<button class="collapsible__tag">Editorial</button>
+									<button class="collapsible__tag">E-com</button>
+									<p>The Blonde Salad is a digital agency, specialized in fashion and lifestyle contents. During my experience I created contents for editorial and e-com. I managed a photo studio inside the agency, composed of 3 strobes and 2 leds.</p>
+								</div>
 							</div>
 							<figure>
 							<img src ="post/blonde-salad.png" alt="girls">
@@ -260,10 +270,11 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							</div>
 						<div class="column columnmuseums">
 							<div class="titolo">
-								<ul class="titolo-tag">
-							<li class="cliente">Museums</li>
-									<li class="tag-cliente">Photography</li>
-								</ul>
+								<div class="collapsible">Museums<i class="fa fa-angle-down arrow1" aria-hidden="true"></i>
+								</div>
+								<div class="collapsible__content">
+									<button class="collapsible__tag">Photography</button>
+								</div>
 							</div>
 							<figure>
 							<img src ="post/museum-prada.png" alt="prada">
