--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<br>
 						<div class="column columnsidequest">
 							<div class="titolo">
-								<div class="collapsible">SideQuest<i class="fa fa-angle-down arrow1" aria-hidden="true"></i>
+								<div class="collapsible">SideQuest
+									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
+										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
+										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
+									</svg>
 								</div>
 								<div class="collapsible__content">
 									<button class="collapsible__tag">3D Modelling</button>
