--- a/index.html
+++ b/index.html
@@ -149,10 +149,29 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						<div class="column columnrationale">
 							<div class="titolo">
 								<div class="collapsible">Rationale Coffee Roasters
-									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
-										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
-										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
-									</svg>
+									<svg class="arrow1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#4D4D1B;}
+	.st1{fill:#FFFFCC;}
+</style>
+<g id="ombra">
+	<path class="st0" d="M23.8,10.9c-0.5-0.8-1.4-1.4-2.4-1.4H19V4.4C19,3.1,17.9,2,16.6,2h-6.3C9.1,2,8,3.1,8,4.4v5.1H5.7
+		c-1.1,0-2,0.5-2.4,1.4c-0.4,0.7-0.3,1.6,0.1,2.3l7.8,11.7c0.5,0.7,1.4,1.2,2.3,1.2c0,0,0,0,0,0c1,0,1.8-0.4,2.3-1.2l7.8-11.7
+		C24.1,12.5,24.2,11.6,23.8,10.9z"/>
+</g>
+<g id="freccia_1_">
+	<path class="st1" d="M20.3,8h-2.8V2.4c0-1-0.8-1.9-1.9-1.9H9.4c-1,0-1.9,0.8-1.9,1.9V8H4.7C3,8,1.9,9.6,2.8,10.9l3.9,5.8l3.9,5.8
+		c0.8,1.3,3,1.3,3.8,0l3.9-5.8l3.9-5.8C23.1,9.6,22,8,20.3,8z"/>
+</g>
+<g id="linea">
+	<path class="st0" d="M12.5,24C12.5,24,12.5,24,12.5,24c-1,0-1.8-0.4-2.3-1.2L2.4,11.1c-0.5-0.7-0.5-1.5-0.1-2.3
+		C2.7,8,3.6,7.5,4.7,7.5H7V2.4C7,1.1,8.1,0,9.4,0h6.3C16.9,0,18,1.1,18,2.4v5.1h2.3c1.1,0,2,0.5,2.4,1.4c0.4,0.7,0.3,1.6-0.1,2.3
+		l-7.8,11.7C14.3,23.6,13.5,24,12.5,24z M4.7,8.5C4,8.5,3.4,8.8,3.1,9.4c-0.2,0.4-0.2,0.8,0.1,1.2L11,22.3c0.3,0.5,0.9,0.7,1.5,0.7
+		l0,0c0.6,0,1.2-0.3,1.5-0.7l7.8-11.7c0.3-0.4,0.3-0.8,0.1-1.2c-0.3-0.5-0.9-0.8-1.6-0.8H17V2.4C17,1.6,16.4,1,15.6,1H9.4
+		C8.6,1,8,1.6,8,2.4v6.1H4.7z"/>
+</g>
+</svg>
 								</div>
 								<div class="collapsible__content">
 									<p>Rationale Coffee Roasters is an Italian micro roastery and a retail. Specialty coffee market is growing significantly in Italy. And even though Italy invented the word barista ☕️, the quality of roasting and the ways how coffee is served and prepared are too low. The request was to codify and visualize the idea of the perfect coffee, the right preparation and the required knowledge to enjoy it.</p>
@@ -196,10 +215,30 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						<div class="column columnsidequest">
 							<div class="titolo">
 								<div class="collapsible">SideQuest
-									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
-										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
-										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
-									</svg>
+									<svg class="arrow1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#4D4D1B;}
+	.st1{fill:#FFFFCC;}
+</style>
+<g id="ombra">
+	<path class="st0" d="M23.8,10.9c-0.5-0.8-1.4-1.4-2.4-1.4H19V4.4C19,3.1,17.9,2,16.6,2h-6.3C9.1,2,8,3.1,8,4.4v5.1H5.7
+		c-1.1,0-2,0.5-2.4,1.4c-0.4,0.7-0.3,1.6,0.1,2.3l7.8,11.7c0.5,0.7,1.4,1.2,2.3,1.2c0,0,0,0,0,0c1,0,1.8-0.4,2.3-1.2l7.8-11.7
+		C24.1,12.5,24.2,11.6,23.8,10.9z"/>
+</g>
+<g id="freccia_1_">
+	<path class="st1" d="M20.3,8h-2.8V2.4c0-1-0.8-1.9-1.9-1.9H9.4c-1,0-1.9,0.8-1.9,1.9V8H4.7C3,8,1.9,9.6,2.8,10.9l3.9,5.8l3.9,5.8
+		c0.8,1.3,3,1.3,3.8,0l3.9-5.8l3.9-5.8C23.1,9.6,22,8,20.3,8z"/>
+</g>
+<g id="linea">
+	<path class="st0" d="M12.5,24C12.5,24,12.5,24,12.5,24c-1,0-1.8-0.4-2.3-1.2L2.4,11.1c-0.5-0.7-0.5-1.5-0.1-2.3
+		C2.7,8,3.6,7.5,4.7,7.5H7V2.4C7,1.1,8.1,0,9.4,0h6.3C16.9,0,18,1.1,18,2.4v5.1h2.3c1.1,0,2,0.5,2.4,1.4c0.4,0.7,0.3,1.6-0.1,2.3
+		l-7.8,11.7C14.3,23.6,13.5,24,12.5,24z M4.7,8.5C4,8.5,3.4,8.8,3.1,9.4c-0.2,0.4-0.2,0.8,0.1,1.2L11,22.3c0.3,0.5,0.9,0.7,1.5,0.7
+		l0,0c0.6,0,1.2-0.3,1.5-0.7l7.8-11.7c0.3-0.4,0.3-0.8,0.1-1.2c-0.3-0.5-0.9-0.8-1.6-0.8H17V2.4C17,1.6,16.4,1,15.6,1H9.4
+		C8.6,1,8,1.6,8,2.4v6.1H4.7z"/>
+</g>
+</svg>
+
 								</div>
 								<div class="collapsible__content">
 									<p>The request was to recreate the world of Sidequest, absorbed by his own room, a musical producer who loves videogames and being a teenager.</p>
@@ -231,10 +270,30 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						<div class="column columnfitbit">
 							<div class="titolo">
 								<div class="collapsible">Fitbit
-									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
-										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
-										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
-									</svg>
+									<svg class="arrow1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#4D4D1B;}
+	.st1{fill:#FFFFCC;}
+</style>
+<g id="ombra">
+	<path class="st0" d="M23.8,10.9c-0.5-0.8-1.4-1.4-2.4-1.4H19V4.4C19,3.1,17.9,2,16.6,2h-6.3C9.1,2,8,3.1,8,4.4v5.1H5.7
+		c-1.1,0-2,0.5-2.4,1.4c-0.4,0.7-0.3,1.6,0.1,2.3l7.8,11.7c0.5,0.7,1.4,1.2,2.3,1.2c0,0,0,0,0,0c1,0,1.8-0.4,2.3-1.2l7.8-11.7
+		C24.1,12.5,24.2,11.6,23.8,10.9z"/>
+</g>
+<g id="freccia_1_">
+	<path class="st1" d="M20.3,8h-2.8V2.4c0-1-0.8-1.9-1.9-1.9H9.4c-1,0-1.9,0.8-1.9,1.9V8H4.7C3,8,1.9,9.6,2.8,10.9l3.9,5.8l3.9,5.8
+		c0.8,1.3,3,1.3,3.8,0l3.9-5.8l3.9-5.8C23.1,9.6,22,8,20.3,8z"/>
+</g>
+<g id="linea">
+	<path class="st0" d="M12.5,24C12.5,24,12.5,24,12.5,24c-1,0-1.8-0.4-2.3-1.2L2.4,11.1c-0.5-0.7-0.5-1.5-0.1-2.3
+		C2.7,8,3.6,7.5,4.7,7.5H7V2.4C7,1.1,8.1,0,9.4,0h6.3C16.9,0,18,1.1,18,2.4v5.1h2.3c1.1,0,2,0.5,2.4,1.4c0.4,0.7,0.3,1.6-0.1,2.3
+		l-7.8,11.7C14.3,23.6,13.5,24,12.5,24z M4.7,8.5C4,8.5,3.4,8.8,3.1,9.4c-0.2,0.4-0.2,0.8,0.1,1.2L11,22.3c0.3,0.5,0.9,0.7,1.5,0.7
+		l0,0c0.6,0,1.2-0.3,1.5-0.7l7.8-11.7c0.3-0.4,0.3-0.8,0.1-1.2c-0.3-0.5-0.9-0.8-1.6-0.8H17V2.4C17,1.6,16.4,1,15.6,1H9.4
+		C8.6,1,8,1.6,8,2.4v6.1H4.7z"/>
+</g>
+</svg>
+
 								</div>
 								<div class="collapsible__content">
 									<p>We wanted to reproduce the different ways and situations of love. Every colour is linked to a portion of the LGBTQ community. I illustrated and animated the stories. I changed the colours of the famous rainbow flag to match with Fitbit’s color palette. 🌈</p>
@@ -254,10 +313,30 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						<div class="column columnblonde">
 							<div class="titolo">
 								<div class="collapsible">The Blonde Salad
-									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
-										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
-										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
-									</svg>
+									<svg class="arrow1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#4D4D1B;}
+	.st1{fill:#FFFFCC;}
+</style>
+<g id="ombra">
+	<path class="st0" d="M23.8,10.9c-0.5-0.8-1.4-1.4-2.4-1.4H19V4.4C19,3.1,17.9,2,16.6,2h-6.3C9.1,2,8,3.1,8,4.4v5.1H5.7
+		c-1.1,0-2,0.5-2.4,1.4c-0.4,0.7-0.3,1.6,0.1,2.3l7.8,11.7c0.5,0.7,1.4,1.2,2.3,1.2c0,0,0,0,0,0c1,0,1.8-0.4,2.3-1.2l7.8-11.7
+		C24.1,12.5,24.2,11.6,23.8,10.9z"/>
+</g>
+<g id="freccia_1_">
+	<path class="st1" d="M20.3,8h-2.8V2.4c0-1-0.8-1.9-1.9-1.9H9.4c-1,0-1.9,0.8-1.9,1.9V8H4.7C3,8,1.9,9.6,2.8,10.9l3.9,5.8l3.9,5.8
+		c0.8,1.3,3,1.3,3.8,0l3.9-5.8l3.9-5.8C23.1,9.6,22,8,20.3,8z"/>
+</g>
+<g id="linea">
+	<path class="st0" d="M12.5,24C12.5,24,12.5,24,12.5,24c-1,0-1.8-0.4-2.3-1.2L2.4,11.1c-0.5-0.7-0.5-1.5-0.1-2.3
+		C2.7,8,3.6,7.5,4.7,7.5H7V2.4C7,1.1,8.1,0,9.4,0h6.3C16.9,0,18,1.1,18,2.4v5.1h2.3c1.1,0,2,0.5,2.4,1.4c0.4,0.7,0.3,1.6-0.1,2.3
+		l-7.8,11.7C14.3,23.6,13.5,24,12.5,24z M4.7,8.5C4,8.5,3.4,8.8,3.1,9.4c-0.2,0.4-0.2,0.8,0.1,1.2L11,22.3c0.3,0.5,0.9,0.7,1.5,0.7
+		l0,0c0.6,0,1.2-0.3,1.5-0.7l7.8-11.7c0.3-0.4,0.3-0.8,0.1-1.2c-0.3-0.5-0.9-0.8-1.6-0.8H17V2.4C17,1.6,16.4,1,15.6,1H9.4
+		C8.6,1,8,1.6,8,2.4v6.1H4.7z"/>
+</g>
+</svg>
+
 								</div>
 								<div class="collapsible__content">
 									<p>The Blonde Salad is a digital agency, specialized in fashion and lifestyle contents. During my experience I created contents for editorial and e-com. I managed a photo studio inside the agency, composed of 3 strobes and 2 leds.</p>
@@ -287,10 +366,30 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 						<div class="column columnmuseums">
 							<div class="titolo">
 								<div class="collapsible">Museums
-									<svg class="arrow1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.06 26"><defs>
-										<style>.cls-1{isolation:isolate;}.cls-2{mix-blend-mode:multiply;}.cls-3{fill:#4d4d1b;}.cls-4{fill:#ffc;}</style></defs>
-										<title>Untitled-1</title><g class="cls-1"><g id="freccia"><g class="cls-2"><path class="cls-3" d="M21.33,10H18.52V4.39A1.89,1.89,0,0,0,16.63,2.5H10.37A1.89,1.89,0,0,0,8.48,4.39V10H5.67C4,10,2.92,11.6,3.77,12.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C24.08,11.6,23,10,21.33,10Z" transform="translate(-1.97)"/><path class="cls-3" d="M13.5,26h0a2.77,2.77,0,0,1-2.32-1.17L3.35,13.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,5.67,9.52H8V4.39A2.39,2.39,0,0,1,10.37,2h6.26A2.4,2.4,0,0,1,19,4.39V9.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L15.82,24.83A2.77,2.77,0,0,1,13.5,26ZM5.67,10.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L12,24.27A1.75,1.75,0,0,0,13.5,25h0A1.75,1.75,0,0,0,15,24.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H18V4.39A1.39,1.39,0,0,0,16.63,3H10.37A1.38,1.38,0,0,0,9,4.39v6.13Z" transform="translate(-1.97)"/></g><path class="cls-4" d="M20.33,8H17.52V2.39A1.89,1.89,0,0,0,15.63.5H9.37A1.89,1.89,0,0,0,7.48,2.39V8H4.67C3,8,1.92,9.6,2.77,10.87l3.91,5.84,3.91,5.84a2.39,2.39,0,0,0,3.82,0l3.91-5.84,3.91-5.84C23.08,9.6,22,8,20.33,8Z" transform="translate(-1.97)"/><path class="cls-3" d="M12.5,24h0a2.77,2.77,0,0,1-2.32-1.17L2.35,11.15a2.19,2.19,0,0,1-.12-2.26A2.73,2.73,0,0,1,4.67,7.52H7V2.39A2.39,2.39,0,0,1,9.37,0h6.26A2.4,2.4,0,0,1,18,2.39V7.52h2.31a2.73,2.73,0,0,1,2.44,1.37,2.19,2.19,0,0,1-.12,2.26L14.82,22.83A2.77,2.77,0,0,1,12.5,24ZM4.67,8.52a1.74,1.74,0,0,0-1.56.85,1.15,1.15,0,0,0,.07,1.22L11,22.27A1.75,1.75,0,0,0,12.5,23h0A1.75,1.75,0,0,0,14,22.27l7.83-11.68a1.15,1.15,0,0,0,.07-1.22,1.74,1.74,0,0,0-1.56-.85H17V2.39A1.39,1.39,0,0,0,15.63,1H9.37A1.38,1.38,0,0,0,8,2.39V8.52Z" transform="translate(-1.97)"/></g></g>
-									</svg>
+									<svg class="arrow1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#4D4D1B;}
+	.st1{fill:#FFFFCC;}
+</style>
+<g id="ombra">
+	<path class="st0" d="M23.8,10.9c-0.5-0.8-1.4-1.4-2.4-1.4H19V4.4C19,3.1,17.9,2,16.6,2h-6.3C9.1,2,8,3.1,8,4.4v5.1H5.7
+		c-1.1,0-2,0.5-2.4,1.4c-0.4,0.7-0.3,1.6,0.1,2.3l7.8,11.7c0.5,0.7,1.4,1.2,2.3,1.2c0,0,0,0,0,0c1,0,1.8-0.4,2.3-1.2l7.8-11.7
+		C24.1,12.5,24.2,11.6,23.8,10.9z"/>
+</g>
+<g id="freccia_1_">
+	<path class="st1" d="M20.3,8h-2.8V2.4c0-1-0.8-1.9-1.9-1.9H9.4c-1,0-1.9,0.8-1.9,1.9V8H4.7C3,8,1.9,9.6,2.8,10.9l3.9,5.8l3.9,5.8
+		c0.8,1.3,3,1.3,3.8,0l3.9-5.8l3.9-5.8C23.1,9.6,22,8,20.3,8z"/>
+</g>
+<g id="linea">
+	<path class="st0" d="M12.5,24C12.5,24,12.5,24,12.5,24c-1,0-1.8-0.4-2.3-1.2L2.4,11.1c-0.5-0.7-0.5-1.5-0.1-2.3
+		C2.7,8,3.6,7.5,4.7,7.5H7V2.4C7,1.1,8.1,0,9.4,0h6.3C16.9,0,18,1.1,18,2.4v5.1h2.3c1.1,0,2,0.5,2.4,1.4c0.4,0.7,0.3,1.6-0.1,2.3
+		l-7.8,11.7C14.3,23.6,13.5,24,12.5,24z M4.7,8.5C4,8.5,3.4,8.8,3.1,9.4c-0.2,0.4-0.2,0.8,0.1,1.2L11,22.3c0.3,0.5,0.9,0.7,1.5,0.7
+		l0,0c0.6,0,1.2-0.3,1.5-0.7l7.8-11.7c0.3-0.4,0.3-0.8,0.1-1.2c-0.3-0.5-0.9-0.8-1.6-0.8H17V2.4C17,1.6,16.4,1,15.6,1H9.4
+		C8.6,1,8,1.6,8,2.4v6.1H4.7z"/>
+</g>
+</svg>
+
 								</div>
 								<div class="collapsible__content">
 									<button class="collapsible__tag">Photography</button>
