--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<figure>
 							<img src ="post/blonde-salad-sunglasses.png" alt="blonde-salad-sunglasses">
 						</figure>
+							<figure>
+							<img src ="post/blonde-salad-superga.png" alt="superga pack">
+						</figure>
+							<figure>
+							<img src ="post/blonde-salad-superga-2.png" alt="superga pack">
+						</figure>
 							</div>
 						<div class="column columnmuseums">
 							<div class="titolo">
