--- a/index.html
+++ b/index.html
@@ -166,29 +166,29 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<br>
 							<br>
 							<figure class="mobile">
-							<img src ="post/rationale-pack.png" alt="packaging-rationale">
+							<img src ="post/rationale-pack-n.png" alt="packaging-rationale">
 
 						</figure>
 							<figure class="mobile">
-							<img src ="post/rationale-card2.png" alt="card2-rationale">
+							<img src ="post/rationale-card2-n.png" alt="card2-rationale">
 						</figure>
 							<figure class="mobile">
-							<img src ="post/rationale-card.png" alt="card-rationale">
+							<img src ="post/rationale-n.png" alt="card-rationale">
 						</figure>
 							<figure class="dekstop">
-								<img src="post/rationale-dekstop-pack.png" alt="rationale-pack">
+								<img src="post/rationale-dekstop-n.png" alt="rationale-pack">
 							</figure>
 							<figure class="dekstop">
 							<img src ="post/rationale-dekstop-menu.png" alt="rationale-menu-coaster">
 						</figure>
 							<figure class="mobile">
-							<img src ="post/rationale-coaster.png" alt="coaster-rationale">
+							<img src ="post/rationale-coaster-n.png" alt="coaster-rationale">
 						</figure>
 							<figure class="mobile">
-							<img src ="post/rationale-menu.png" alt="card2-menu">
+							<img src ="post/rationale-menu-n.png" alt="card2-menu">
 						</figure>
 							<figure>
-							<img src ="post/rationale-bag.png" alt="bag-menu">
+							<img src ="post/rationale-bag-n.png" alt="bag-menu">
 						</figure>
 						</div>
 							<br>
@@ -209,22 +209,22 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 								</div>
 							</div>
 							<figure class="mobile">
-							<img src ="post/sidequest-hylia.png" alt="sidequest-hylia">
+							<img src ="post/sidequest-hylia-n.png" alt="sidequest-hylia">
 						</figure>
 							<figure class="mobile">
-							<img src ="post/sidequest-hylia-asset.png" alt="sidequest-asset">
+							<img src ="post/sidequest-hylia-asset-n.png" alt="sidequest-asset">
 						</figure>
 							<figure class="dekstop">
-								<img src="post/sidequest-dekstop-hylia.png" alt="sidequest-hylia">
+								<img src="post/sidequest-dekstop-hylia-n.png" alt="sidequest-hylia">
 							</figure>
 							<figure class="mobile">
-							<img src ="post/sidequest-sandrod.png" alt="sidequest-story">
+							<img src ="post/sidequest-sandrod-n.png" alt="sidequest-story">
 						</figure>
 							<figure class="mobile">
-							<img src ="post/sidequest-sandrod-asset.png" alt="sidequest-sandrod-asset" style="">
+							<img src ="post/sidequest-sandrod-asset-n.png" alt="sidequest-sandrod-asset" style="">
 						</figure>
 							<figure class="dekstop">
-								<img src="post/sidequest-dekstop-sandrod.png" alt="sidequest-sandrod">
+								<img src="post/sidequest-dekstop-sandrod-n.png" alt="sidequest-sandrod">
 							</figure>
 							</div>
 							<br>
@@ -281,13 +281,13 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<img src ="post/blonde-salad-sale-banner.png" alt="blonde-salad-banner">
 						</figure>
 							<figure>
-							<img src ="post/blonde-salad-superga.png" alt="superga pack">
+							<img src ="post/blonde-salad-superga-n.png" alt="superga pack">
 						</figure>
 							<figure>
-							<img src ="post/blonde-salad-superga-2.png" alt="superga pack">
+							<img src ="post/blonde-salad-superga-2-n.png" alt="superga pack">
 						</figure>
 							<figure>
-							<img src ="post/blonde-salad-vintage.png" alt="blonde-salad-vintage">
+							<img src ="post/blonde-salad-vintage-n.png" alt="blonde-salad-vintage">
 						</figure>
 							<figure>
 							<img src ="post/blonde-salad-sunglasses.png" alt="blonde-salad-sunglasses">
