--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve
 							<video src="post/senso-shoes.mp4" autoplay loop muted>
 								</video>
 							<figure>
-							<img src ="post/blonde-salad-sale.png" alt="blonde-salad-sale">
+							<img src ="post/blonde-salad-sale-n.png" alt="blonde-salad-sale">
 						</figure>
 							<figure>
 							<img src ="post/blonde-salad-sale-banner.png" alt="blonde-salad-banner">
