--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
   </nav>
 </body>
 <script>
+let vh = window.innerHeight * 0.01;
+document.documentElement.style.setProperty('--vh', `${vh}px`);
+
 function dropDown() {
     var header = document.querySelector('.dropdown-menu');
     if (header.style.display === "block") {
