--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       </div>
       <div class="dropdown-menu">
         <ul class="submenu">
-          <li><a class="dot" id="dot1" href="#slide1" onclick="currentSlide(1)">The Blonde Salad</a></li>
-          <li><a class="dot" id="dot2" href="#slide2" onclick="currentSlide(2)">Rationale Coffee Roasters</a></li>
-          <li><a class="dot" id="dot3" href="#slide3" onclick="currentSlide(3)">Fitbit</a></li>
-          <li><a class="dot" id="dot4" href="#slide4" onclick="currentSlide(4)">Roche</a></li>
-          <li><a class="dot" id="dot5" href="#slide5" onclick="currentSlide(5)">Sidequest</a></li>
-          <li><a class="dot" id="dot6" href="#slide6" onclick="currentSlide(6)">Photography</a></li>
+          <li><a class="dot" id="dot1" href="#slide1">The Blonde Salad</a></li>
+          <li><a class="dot" id="dot2" href="#slide2">Rationale Coffee Roasters</a></li>
+          <li><a class="dot" id="dot3" href="#slide3">Fitbit</a></li>
+          <li><a class="dot" id="dot4" href="#slide4">Roche</a></li>
+          <li><a class="dot" id="dot5" href="#slide5">Sidequest</a></li>
+          <li><a class="dot" id="dot6" href="#slide6">Photography</a></li>
         </ul>
       </div>
     </header>
@@ -131,6 +131,10 @@
   </nav>
 </body>
 <script>
+var carousel = document.querySelector('.slides');
+var elements = Array.from(document.querySelectorAll('.slide'));
+var indicators = Array.from(document.querySelectorAll('.dot'));
+	
 let vh = window.innerHeight * 0.01;
 document.documentElement.style.setProperty('--vh', `${vh}px`);
 
@@ -142,40 +146,41 @@ function dropDown() {
       header.style.display = "block";
     }
 }
-var slideIndex = 1;
-showSlides(slideIndex);
+	function updateHistory(hash) {
+  	clearTimeout(updateHistory.timeout);
+  	updateHistory.timeout = setTimeout(function () {
+    	if (window.location.hash !== hash) {
+      	history.pushState({}, window.title, hash);
+    }
+  }, 2000);
+}
+window.addEventListener('hashchange', function (e) {  const articleToShow =
+    document.querySelector(window.location.hash) ||
+    document.querySelector('.slide');  articleToShow.scrollIntoView();  e.preventDefault();
+}, false);
+	
+const observer = new IntersectionObserver(onIntersectionObserved, {
+  root:carousel,
+  threshold: 0.6
+});
 
-function currentSlide(n) {
-  showSlides(slideIndex = n);
+elements.forEach(element => {
+  observer.observe(element);
+});
+
+function onIntersectionObserved(entries) {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      const intersectingIndex = elements.indexOf(entry.target);
+      activateIndicator(intersectingIndex);
+    }
+  });
 }
 
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("slide");
-  var dots = document.getElementsByClassName("dot");
-  var currentIndex = 0;
-
-
-
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
+function activateIndicator(index) {
+  indicators.forEach((indicator, i) => {
+    indicator.classList.toggle('active', i === index);
+  });
 }
-var observer = new IntersectionObserver(function(entries) {
-	if(entries[0].isIntersecting === true)
-		console.log('Element is fully visible in screen');
-    }, { threshold: [0.7] });
-
-observer.observe(document.querySelector('#slide1'));
-observer.observe(document.querySelector('#slide2'));
-observer.observe(document.querySelector('#slide3'));
-observer.observe(document.querySelector('#slide4'));
-observer.observe(document.querySelector('#slide5'));
-observer.observe(document.querySelector('#slide6'));
-
-
 </script>
 </html>
