--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       </div>
       <div class="dropdown-menu">
         <ul class="submenu">
-          <li><a class="dot" id="dot1" href="#!slide1">The Blonde Salad</a></li>
-          <li><a class="dot" id="dot2" href="#!slide2">Rationale Coffee Roasters</a></li>
-          <li><a class="dot" id="dot3" href="#!slide3">Fitbit</a></li>
-          <li><a class="dot" id="dot4" href="#!slide4">Roche</a></li>
-          <li><a class="dot" id="dot5" href="#!slide5">Sidequest</a></li>
-          <li><a class="dot" id="dot6" href="#!slide6">Photography</a></li>
+          <li><a class="dot" id="dot1" href="#slide1">The Blonde Salad</a></li>
+          <li><a class="dot" id="dot2" href="#slide2">Rationale Coffee Roasters</a></li>
+          <li><a class="dot" id="dot3" href="#slide3">Fitbit</a></li>
+          <li><a class="dot" id="dot4" href="#slide4">Roche</a></li>
+          <li><a class="dot" id="dot5" href="#slide5">Sidequest</a></li>
+          <li><a class="dot" id="dot6" href="#slide6">Photography</a></li>
         </ul>
       </div>
     </header>
